changes paths, updated docs
